[package]
name = "fx-torrent"
version = "0.2.0"
edition = "2021"
rust-version = "1.75"
license = "Apache-2.0"
description = "FX Torrent is a feature rich Bittorrent protocol implementation written in rust supporting Linux, MacOS and Windows."
keywords = ["bittorrent", "libtorrent", "torrent", "magnet", "dht"]
repository = "https://github.com/yoep/fx-torrent"
readme = "README.md"
exclude = [
    ".config",
    ".github",
    "docs/*",
    "examples/*",
    "target/*",
    "test/*",
    "torrents/*",
    ".bumpversion.toml",
    "Makefile",
]

[lib]
crate-type = ["rlib"]

[dependencies]
async-trait = "0.1"
axum = "0.8"
base32 = "0.5"
base64 = "0.22"
bit-vec = "0.8"
bitmask-enum = "2.2"
byteorder = "1.5"
crc = "3.3"
derive_more = { version = "2.1", features = ["display"] }
futures = "0.3"
fx-callback = "1.0"
fx-handle = "1.0"
hex = "0.4"
itertools = "0.14"
log = "0.4"
percent-encoding = "2.3"
rand = "0.9"
reqwest = { version = "0.13", features = ["stream"] }
serde = "1.0"
serde_bencode = "0.2"
serde_bytes = "0.11"
sha1 = "0.10.6"
sha2 = "0.10.9"
thiserror = "2.0"
tokio = { version = "1.48", features = ["rt-multi-thread", "time", "macros"] }
tokio-util = "0.7"
tracing = { version = "0.1", optional = true }
tracing-futures = { version = "0.2", optional = true }
tracing-subscriber = { version = "0.3", optional = true }
url = "2.5"

[features]
default = ["dht", "extension-metadata", "extension-pex", "extension-holepunch", "extension-donthave"]

dht = []
extension-donthave = []
extension-holepunch = []
extension-metadata = []
extension-pex = []
tracing = ["dep:tracing", "dep:tracing-futures", "dep:tracing-subscriber"]

[dev-dependencies]
chrono = "0.4.42"
crossterm = { version = "0.29", features = ["event-stream"] }
log4rs = { version = "1.4", features = ["console_writer"] }
mockall = "0.14"
ratatui = "0.30"
tempfile = "3.24"
tokio = { version = "1.48", features = ["signal"] }
tracing-chrome = "0.7"

[package.metadata.docs.rs]
all-features = true

[[example]]
name = "cli"
path = "examples/cli/main.rs"
required-features = ["tracing"]
